--- a/.github/workflows/CODEOWNERS
+++ b/.github/workflows/CODEOWNERS
@@ -1,4 +1,4 @@
-*  @Tigranhambardzumyan
-*.js  @Tigranhambardzumyan
+*  @tigranhambardzumyans
+*.js  @tigranhambardzumyans
 *.yml  @tigranhambardzumyans
-/public/  @Tigranhambardzumyan
+/public/  @tigranhambardzumyans
