--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
         if: github.event_name == 'push'
         run: npm run build 
       # - name: Deploy to Staging (can be AWS) to some test ENV
-      #
-        
+      # I will deploy code to the test AWS EC2
+    
