--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
         if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
         with:
+           name: build
            path: build           
       # - name: Deploy to Staging (can be AWS) to some test ENV
       # I will deploy code to the test AWS EC2
