--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   pull_request:
-    branches: [develop]
+    branches: [develop, main]
   push:
-    branches: [develop]
+    branches: [develop, main]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -34,3 +34,8 @@ jobs:
       # - name: Deploy to Staging (can be AWS) to some test ENV
       # I will deploy code to the test AWS EC2
     
+      - name: Create a Release
+        if: github.event_name == 'push'  && github.ref == 'refs/heads/main'
+        run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.CUSTOM_TOKEN }}        
