--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     branches: [develop, main]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest, windows, mac, container Or self-Hostet runer
     steps:
       - uses: actions/checkout@v2
       - name: Use NodeJS
@@ -33,6 +33,7 @@ jobs:
            path: build           
       # - name: Deploy to Staging (can be AWS) to some test ENV
       # I will deploy code to the test AWS EC2
+      # Tests 1) Smoke 5 minutes
     
       - name: Create a Release
         if: github.event_name == 'push'  && github.ref == 'refs/heads/main'
