--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 name: CI
 on:
-  pull_request:
-    branches: [develop, main]
-  push:
-    branches: [develop, main]
-jobs:
+  workflow_dispatch
   build:
     runs-on: ubuntu-latest
     steps:
